improved Ticket Access filtering